--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ a:hover {
 
 /* Footer */
 
-.ElytreSite-powered-by {
+.Footer-powered-by {
   color: gray;
   font-size: .75em;
   margin-top: 30px;
